unpackaged/main/default/objects/ACG_Reimbursement__c/ACG_Reimbursement__c.object-meta.xml
<CustomObject>
    <label>Reimbursement</label>
    <nameField>
        <displayFormat>RM-{000000}</displayFormat>
        <label>Reimbursement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reimbursements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>