unpackaged/main/default/objects/ACG_Reimbursement__c/fields/AAA_Call__c.field-meta.xml
<CustomField>
    <fullName>AAA_Call__c</fullName>
    <label>AAA Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NI</fullName>
                <label>Not Indicated</label>
            </value>
            <value>
                <fullName>NO</fullName>
                <label>Did not call AAA</label>
            </value>
            <value>
                <fullName>BY</fullName>
                <label>Busy, could not get through</label>
            </value>
            <value>
                <fullName>MR</fullName>
                <label>Member Relations</label>
            </value>
            <value>
                <fullName>YS</fullName>
                <label>YES, Call Attempted</label>
            </value>
            <value>
                <fullName>RC</fullName>
                <label>RECIPROCAL</label>
            </value>
            <value>
                <fullName>YA</fullName>
                <label>YES, LONG ETA/ CALL</label>
            </value>
            <value>
                <fullName>YE</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>NA</fullName>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>NC</fullName>
                <isActive>false</isActive>
                <label>NC</label>
            </value>
            <value>
                <fullName>Y1</fullName>
                <isActive>false</isActive>
                <label>Y1</label>
            </value>
            <value>
                <fullName>Y2</fullName>
                <isActive>false</isActive>
                <label>Y2</label>
            </value>
            <value>
                <fullName>Y3</fullName>
                <isActive>false</isActive>
                <label>Y3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>