unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Address__c.field-meta.xml
<CustomField>
    <fullName>ACG_Address__c</fullName>
    <label>Address Line 1</label>
    <type>TextArea</type>
</CustomField>