unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Address_change__c.field-meta.xml
<CustomField>
    <fullName>ACG_Address_change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address change</label>
    <type>Checkbox</type>
</CustomField>