unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>ACG_Amount_Paid__c</fullName>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>