unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>ACG_Amount_Requested__c</fullName>
    <label>Amount Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>