unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Appeal_Comments__c.field-meta.xml
<CustomField>
    <fullName>ACG_Appeal_Comments__c</fullName>
    <label>Appeal Comments</label>
    <type>TextArea</type>
</CustomField>