unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Appeal_Decision__c.field-meta.xml
<CustomField>
    <fullName>ACG_Appeal_Decision__c</fullName>
    <label>Appeal Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Partially Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>