unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Charge_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>ACG_Charge_Entitlement__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Charge Entitlement</label>
    <type>Checkbox</type>
</CustomField>