unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Date_Entered__c.field-meta.xml
<CustomField>
    <fullName>ACG_Date_Entered__c</fullName>
    <label>Date Entered</label>
    <type>Date</type>
</CustomField>