unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Date_Received__c.field-meta.xml
<CustomField>
    <fullName>ACG_Date_Received__c</fullName>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>