unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Decision__c.field-meta.xml
<CustomField>
    <fullName>ACG_Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Partially Approved</fullName>
                <isActive>false</isActive>
                <label>Partially Approved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>