unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_District_Codes__c.field-meta.xml
<CustomField>
    <fullName>ACG_District_Codes__c</fullName>
    <label>District Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>110</fullName>
                <label>110 Sharepoint</label>
            </value>
            <value>
                <fullName>111</fullName>
                <label>111 Electronic Claim</label>
            </value>
            <value>
                <fullName>112</fullName>
                <label>112 Mail</label>
            </value>
            <value>
                <fullName>222</fullName>
                <label>222 Out Of Region</label>
            </value>
            <value>
                <fullName>333</fullName>
                <label>333 Mass Pike Territory</label>
            </value>
            <value>
                <fullName>444</fullName>
                <label>444 Member Relations</label>
            </value>
            <value>
                <fullName>555</fullName>
                <label>555 CT</label>
            </value>
            <value>
                <fullName>601</fullName>
                <label>601 New Jersey</label>
            </value>
            <value>
                <fullName>602</fullName>
                <label>602 New Hampshire</label>
            </value>
            <value>
                <fullName>603</fullName>
                <label>603 New York</label>
            </value>
            <value>
                <fullName>777</fullName>
                <label>777 Rhode Island</label>
            </value>
            <value>
                <fullName>888</fullName>
                <label>888 Mass</label>
            </value>
            <value>
                <fullName>999</fullName>
                <label>999 Denial</label>
            </value>
            <value>
                <fullName>001 MAIN LINE</fullName>
                <isActive>false</isActive>
                <label>001 MAIN LINE</label>
            </value>
            <value>
                <fullName>002 ANTHRACITE</fullName>
                <isActive>false</isActive>
                <label>002 ANTHRACITE</label>
            </value>
            <value>
                <fullName>003 LOWER BUCKS</fullName>
                <isActive>false</isActive>
                <label>003 LOWER BUCKS</label>
            </value>
            <value>
                <fullName>004 DOYLESTOWN</fullName>
                <isActive>false</isActive>
                <label>004 DOYLESTOWN</label>
            </value>
            <value>
                <fullName>006 PLYMOUTH MEETING</fullName>
                <isActive>false</isActive>
                <label>006 PLYMOUTH MEETING</label>
            </value>
            <value>
                <fullName>007 PHILADELPHIA</fullName>
                <isActive>false</isActive>
                <label>007 PHILADELPHIA</label>
            </value>
            <value>
                <fullName>009 EAST BRUNSWICK (CCIT)</fullName>
                <isActive>false</isActive>
                <label>009 EAST BRUNSWICK (CCIT)</label>
            </value>
            <value>
                <fullName>010 SALES ADMINISTRATOR</fullName>
                <isActive>false</isActive>
                <label>010 SALES ADMINISTRATOR</label>
            </value>
            <value>
                <fullName>011 WEST CHESTER</fullName>
                <isActive>false</isActive>
                <label>011 WEST CHESTER</label>
            </value>
            <value>
                <fullName>012 1ST FLOOR</fullName>
                <isActive>false</isActive>
                <label>012 1ST FLOOR</label>
            </value>
            <value>
                <fullName>013 MEMBERSHIP RECORDS</fullName>
                <isActive>false</isActive>
                <label>013 MEMBERSHIP RECORDS</label>
            </value>
            <value>
                <fullName>016 NORTHFIELD</fullName>
                <isActive>false</isActive>
                <label>016 NORTHFIELD</label>
            </value>
            <value>
                <fullName>017 BURLEIGH</fullName>
                <isActive>false</isActive>
                <label>017 BURLEIGH</label>
            </value>
            <value>
                <fullName>020 NORTHEAST</fullName>
                <isActive>false</isActive>
                <label>020 NORTHEAST</label>
            </value>
            <value>
                <fullName>021 CHELTENHAM</fullName>
                <isActive>false</isActive>
                <label>021 CHELTENHAM</label>
            </value>
            <value>
                <fullName>022 DOWNINGTOWN CCIT</fullName>
                <isActive>false</isActive>
                <label>022 DOWNINGTOWN CCIT</label>
            </value>
            <value>
                <fullName>024 SPRINGFIELD</fullName>
                <isActive>false</isActive>
                <label>024 SPRINGFIELD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>