unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Email__c.field-meta.xml
<CustomField>
    <fullName>ACG_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>