unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>ACG_Facility_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Facility</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reimbursements (Facility Name)</relationshipLabel>
    <relationshipName>Reimbursements1</relationshipName>
    <type>Lookup</type>
</CustomField>