unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Member_Comments__c.field-meta.xml
<CustomField>
    <fullName>ACG_Member_Comments__c</fullName>
    <label>Member Comments</label>
    <type>TextArea</type>
</CustomField>