unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>ACG_Member_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ERS Member</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>ERS Member, Member</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reimbursements</relationshipLabel>
    <relationshipName>Reimbursements</relationshipName>
    <type>Lookup</type>
</CustomField>