unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>ACG_Membership_Number__c</fullName>
    <formula>ACG_Member_Name__r.Membership_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Number</label>
    <type>Text</type>
</CustomField>