unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Miles_to__c.field-meta.xml
<CustomField>
    <fullName>ACG_Miles_to__c</fullName>
    <label>Miles to</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>