unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Miles_Towed__c.field-meta.xml
<CustomField>
    <fullName>ACG_Miles_Towed__c</fullName>
    <label>Miles Towed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>