unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Orig_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>ACG_Orig_Reimbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orig. Reimbursement</label>
    <referenceTo>ACG_Reimbursement__c</referenceTo>
    <relationshipLabel>Appeals</relationshipLabel>
    <relationshipName>Reimbursements</relationshipName>
    <type>Lookup</type>
</CustomField>