unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>ACG_Pay_Date__c</fullName>
    <label>Pay Date</label>
    <type>Date</type>
</CustomField>