unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Pay_ID__c.field-meta.xml
<CustomField>
    <fullName>ACG_Pay_ID__c</fullName>
    <label>Pay ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>