unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Payment_Comments__c.field-meta.xml
<CustomField>
    <fullName>ACG_Payment_Comments__c</fullName>
    <label>Payment Comments</label>
    <type>TextArea</type>
</CustomField>