unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Reason__c.field-meta.xml
<CustomField>
    <fullName>ACG_Reason__c</fullName>
    <label>Decision Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ACG_Decision__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>00</fullName>
                <label>00 - No Receipt</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>01 - Too Old</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>02 - Unpaid Receipt</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>03 - Not Legiable Receipt</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>04 - Credit Card Receipt</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>05 - Non Plus on Date of Service</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>06 - Locksmith Overages</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>07 - Basic Member</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>08 - Non-Member on paid recpt</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>09 - Over Entitlements</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10 - Illegal Actions</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11 - Ineligible Expenses</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12 - Ineligible Vehicle or Equipment</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>13 - Inaccessible Location</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>15 - Expired (Under 90 days past due)</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>16 - Cancelled (Over 90 days past due)</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>17 - No MC/RV Coverage</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>18 - SDS Refunded</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>19-EVERYDAY MEMBER</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>20 - Did Not Call AAA</label>
            </value>
            <value>
                <fullName>2T</fullName>
                <isActive>false</isActive>
                <label>2T-2nd Tow</label>
            </value>
            <value>
                <fullName>AC</fullName>
                <isActive>false</isActive>
                <label>AC-Accident</label>
            </value>
            <value>
                <fullName>AM</fullName>
                <isActive>false</isActive>
                <label>AM-Additional Monies Approved</label>
            </value>
            <value>
                <fullName>BA</fullName>
                <label>BA - BASIC - SERVICE FAILURE</label>
            </value>
            <value>
                <fullName>BA - Basic - Service On Own</fullName>
                <isActive>false</isActive>
                <label>BA - Basic - Service On Own</label>
            </value>
            <value>
                <fullName>BD</fullName>
                <isActive>false</isActive>
                <label>BD-Breakdown</label>
            </value>
            <value>
                <fullName>BE</fullName>
                <label>BE - Basic - Exception Years</label>
            </value>
            <value>
                <fullName>BL</fullName>
                <label>BL - Basic - Locksmith</label>
            </value>
            <value>
                <fullName>BP</fullName>
                <label>BP - Basic - Police Requested</label>
            </value>
            <value>
                <fullName>BT</fullName>
                <label>BT - Basic - Turnpike/Thruway</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>