unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Reimbursement_Appealed__c.field-meta.xml
<CustomField>
    <fullName>ACG_Reimbursement_Appealed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Appeal</label>
    <type>Checkbox</type>
</CustomField>