unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>ACG_Service_Date__c</fullName>
    <label>Service Date</label>
    <type>Date</type>
</CustomField>