unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>ACG_Service_Type__c</fullName>
    <label>Service Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Bicycle</fullName>
            </value>
            <value>
                <fullName>Flat Tire</fullName>
            </value>
            <value>
                <fullName>Fuel</fullName>
            </value>
            <value>
                <fullName>Lockout</fullName>
            </value>
            <value>
                <fullName>Locksmith</fullName>
            </value>
            <value>
                <fullName>Tow</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Winch</fullName>
            </value>
            <value>
                <fullName>Motorcycle</fullName>
            </value>
            <value>
                <fullName>Electric Charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>