unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Status__c.field-meta.xml
<CustomField>
    <fullName>ACG_Status__c</fullName>
    <label>Management Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Decision Approved</fullName>
            </value>
            <value>
                <fullName>Management Escalated</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>