unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Subject__c.field-meta.xml
<CustomField>
    <fullName>ACG_Subject__c</fullName>
    <label>Subject</label>
    <length>18</length>
    <type>Text</type>
</CustomField>