unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Tow_Destination__c.field-meta.xml
<CustomField>
    <fullName>ACG_Tow_Destination__c</fullName>
    <label>Tow Destination</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>