unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Tow_Miles__c.field-meta.xml
<CustomField>
    <fullName>ACG_Tow_Miles__c</fullName>
    <label>Tow Miles</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>