unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>ACG_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>FSL_Member_Vehicle__c</referenceTo>
    <relationshipLabel>Reimbursements</relationshipLabel>
    <relationshipName>Reimbursements</relationshipName>
    <type>Lookup</type>
</CustomField>