unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Vehicle_Make__c.field-meta.xml
<CustomField>
    <fullName>ACG_Vehicle_Make__c</fullName>
    <label>Make</label>
    <length>18</length>
    <type>Text</type>
</CustomField>