unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>ACG_Vehicle_Model__c</fullName>
    <label>Model</label>
    <length>18</length>
    <type>Text</type>
</CustomField>