unpackaged/main/default/objects/ACG_Reimbursement__c/fields/ACG_Vin__c.field-meta.xml
<CustomField>
    <fullName>ACG_Vin__c</fullName>
    <label>VIN</label>
    <length>18</length>
    <type>Text</type>
</CustomField>