unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Alt_City__c.field-meta.xml
<CustomField>
    <fullName>Alt_City__c</fullName>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>