unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Alt_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Alt_First_Name__c</fullName>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>