unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Alt_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Alt_Last_Name__c</fullName>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>