unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Alt_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Alt_Street_Address__c</fullName>
    <label>Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>