unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Alt_Zip__c.field-meta.xml
<CustomField>
    <fullName>Alt_Zip__c</fullName>
    <description>Text field to allow leading &quot;0&quot; as number field removes them.</description>
    <label>Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>