unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Amount_Approved_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Amount_Approved_Allocation__c</fullName>
    <label>Amount Approved</label>
    <summarizedField>Allocations__c.Approved__c</summarizedField>
    <summaryForeignKey>Allocations__c.Reimbursement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>