unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Call_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Call_Consumed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Helper to increment / decrement ONE call from Service Contract.</description>
    <label>Call Consumed</label>
    <type>Checkbox</type>
</CustomField>