unpackaged/main/default/objects/ACG_Reimbursement__c/fields/City_Member__c.field-meta.xml
<CustomField>
    <fullName>City_Member__c</fullName>
    <formula>ACG_Member_Name__r.BillingCity</formula>
    <label>City</label>
    <type>Text</type>
</CustomField>