unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Club_Code__c.field-meta.xml
<CustomField>
    <fullName>Club_Code__c</fullName>
    <formula>ACG_Member_Name__r.Club_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Club Code</label>
    <type>Text</type>
</CustomField>