unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Entitlement__c</fullName>
    <label>Entitlement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AR</fullName>
                <label>AR Auto Renewal Call Benefit</label>
            </value>
            <value>
                <fullName>EC</fullName>
                <label>EC Entitlements Charge</label>
            </value>
            <value>
                <fullName>ED</fullName>
                <label>ED Exception Denied</label>
            </value>
            <value>
                <fullName>ES</fullName>
                <label>ES Dispatcher Exception Safety Tow</label>
            </value>
            <value>
                <fullName>EX</fullName>
                <label>EX Exception Granted</label>
            </value>
            <value>
                <fullName>HL</fullName>
                <label>HL Premier Home Lockout Benefit</label>
            </value>
            <value>
                <fullName>ISF</fullName>
                <label>ISF Immediate Service Fee</label>
            </value>
            <value>
                <fullName>MB</fullName>
                <label>MB Member Billing Call</label>
            </value>
            <value>
                <fullName>MC</fullName>
                <label>MC Basic Motorcycle Coverage</label>
            </value>
            <value>
                <fullName>PB</fullName>
                <label>PB Premier Battery Benefit</label>
            </value>
            <value>
                <fullName>PIL</fullName>
                <label>PIL ISF Pilot Use Only</label>
            </value>
            <value>
                <fullName>PIX</fullName>
                <label>PIX Premier Long Tow Benefit</label>
            </value>
            <value>
                <fullName>RL</fullName>
                <label>RL RV Upto 500 Limit</label>
            </value>
            <value>
                <fullName>SF</fullName>
                <label>SF Service Fee (Pilot Group Only)</label>
            </value>
            <value>
                <fullName>XCD</fullName>
                <label>XCD (Pilot Use Only) CDR Home Tow N</label>
            </value>
            <value>
                <fullName>XCT</fullName>
                <label>XCT (Pilot Use Only) CDR Home Tow</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>