unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Entitlements__c.field-meta.xml
<CustomField>
    <fullName>Entitlements__c</fullName>
    <formula>TEXT(ACG_Member_Name__r.ACG_Entitlements_Used__c)</formula>
    <label>Entitlements</label>
    <type>Text</type>
</CustomField>