unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <formula>ACG_Member_Name__r.Membership_Expiration_Date__c</formula>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>