unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name__c</fullName>
    <label>Facility Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>