unpackaged/main/default/objects/ACG_Reimbursement__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <formula>ACG_Member_Name__r.FirstName</formula>
    <label>First Name</label>
    <type>Text</type>
</CustomField>