unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <formula>ACG_Member_Name__r.LastName</formula>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>