unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Mbr_City__c.field-meta.xml
<CustomField>
    <fullName>Mbr_City__c</fullName>
    <description>Mbr = Member</description>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>