unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Mbr_State__c.field-meta.xml
<CustomField>
    <fullName>Mbr_State__c</fullName>
    <description>Mbr = Member</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>