unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Mbr_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Mbr_Street_Address__c</fullName>
    <description>Mbr = Member</description>
    <label>Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>