unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Mbr_Zip__c.field-meta.xml
<CustomField>
    <fullName>Mbr_Zip__c</fullName>
    <description>Mbr = Member</description>
    <label>Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>