unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Id__c</fullName>
    <label>Member Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>