unpackaged/main/default/objects/ACG_Reimbursement__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>ACG_Member_Name__r.Phone</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>